# base_back_app

./: .gitignore  .pre-commit-config.yaml  README.md
src/: .gitignore  pyproject.toml
src/api/: me.py  model_name_to_entity_name.py  router.py  signed_urls.py  urls.py
src/app/admin/: PersonAdmin.py  __init__.py
src/app/migrations/: 0001_initial.py
src/app/models/: person.py
src/app/models/user/: UserManager.py  manager.py  model.py  user.py
src/app/serializers/: PersonSerializer.py  UserSerializer.py  __init__.py
src/app/viewsets/: PersonViewSet.py  __init__.py
src/auth/: views.py
src/common/drest_helpers/: drest_parser.py  drest_select.py
src/common/helpers/: AbstractBaseModel.py  create_char_field.py  fields.py  get_model_meta.py  try_get_attr.py
src/common/mixins/: TimestampMixin.py
src/core/: settings.py
src/dynamic-rest-master/: install_requires.txt  requirements.benchmark.txt
src/named_views/: apps.py  model_admins.py
src/named_views/locale/ru/LC_MESSAGES/: django.mo  django.po
src/named_views/migrations/: 0001_initial.py
src/named_views/mixins/: __init__.py  named_view_element_mixin.py
src/named_views/models/: __init__.py
src/named_views/models/base_table_view/: __init__.py  admin.py  model.py  serializer.py  viewset.py
src/named_views/models/content_type_representation/: content_type_serializer.py  content_type_viewset.py
src/named_views/models/context_view_params/: __init__.py  admin.py  model.py  serializer.py  viewset.py
src/named_views/models/named_filter/: __init__.py  admin.py  model.py  serializer.py  viewset.py
src/named_views/models/named_view/: __init__.py  admin.py  model.py  serializer.py  viewset.py
src/named_views/utils/: __init__.py  base_table_view_utils.py
