[tool.poetry]
name = "core-app"
version = "0.1.0"
description = ""
authors = ["Alex Kuznetsov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
dynamic-rest = {path = "dynamic-rest-master", develop = true}



[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
[project]
name = "core-app"
version = "0.1.0"
description = ""
authors = [
    {name = "akuznetzz", email = "akuznetzz@yandex.ru"},
    {name = "Alex Kuznetsov"},
]
dependencies = [
    "django<6.0.0,>=5.0.1",
    "djangorestframework<4.0.0,>=3.14.0",
    "psycopg[binary]<4.0.0,>=3.1.17",
    "dynamic-rest @ file:///${PROJECT_ROOT}/dynamic-rest-master",
    "mypy>=1.8.0",
    "mypy-baseline>=0.6.1",
]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
